# knowledge-journal

./: .gitignore  README.md  section2-jupyter.md  section4-code-generation.md
computing/ai/: README.md
computing/ai/low-level/neural-networks/theory/: README.md  nn-theory.ipynb  pyproject.toml  requirements.txt
computing/ansible/: hosts
computing/api/: README.md
computing/arduino/: README.md
computing/assembly/: README.md
computing/bash/: README.md
computing/c/: README.md
computing/cpp/: README.md  effective-modern-cpp.md
computing/cryptography/: README.md
computing/docker/: README.md
computing/emacs/: README.md
computing/embedded-systems/: README.md
computing/gdb/: README.md
computing/git/: README.md
computing/gnupg/: README.md
computing/i3/: README.md
computing/interview/: README.md
computing/large-language-model/: README.md
computing/latex/: README.md
computing/machine-learning/: README.md
computing/macos/: README.md
computing/matlab/: README.md
computing/ntp/: README.md
computing/numerical-methods/: README.md
computing/operating-systems/: README.md
computing/project-euler/: README.md  pyproject.toml  requirements.txt
computing/python/: README.md
computing/ssh/: README.md
computing/tmux/: README.md
computing/unix/: README.md
computing/valgrind/: README.md
computing/vim/: README.md
computing/webdev/: README.md
economics/granger-causality/: README.md
materials/drx/: data.txt  drx.ipynb  requirements.txt
math/OLS/: README.md
math/ols/: README.md
mixed/chemistry/: README.md
(+275 files in other folders)
